<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/corner"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/seeAllIv"
        android:layout_width="100dp"
        android:layout_height="140dp"
        android:src="@color/yellow"
        android:layout_margin="4dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/seeAllItemNameTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_extra_blod"
        android:maxLines="1"
        android:text="@string/test_movie_name"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@+id/seeAllIv"
        app:layout_constraintStart_toEndOf="@+id/seeAllIv"
        app:layout_constraintEnd_toStartOf="@+id/seeAllSave"/>

    <ImageView
        android:id="@+id/seeAllSave"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@+id/seeAllItemNameTv"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_save" />

    <TextView
        android:id="@+id/seeAllItemDateTv"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_light"
        android:maxLines="1"
        android:text="@string/test_date"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/seeAllItemNameTv"
        app:layout_constraintTop_toBottomOf="@+id/seeAllItemNameTv"/>

    <TextView
        android:id="@+id/seeAllItemRateTv"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_mini_rate"
        android:maxLines="1"
        android:drawablePadding="4dp"
        android:text="@string/test_rating"
        android:fontFamily="@font/gilroy_light"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/seeAllItemDateTv"
        app:layout_constraintTop_toBottomOf="@+id/seeAllItemDateTv"/>

</androidx.constraintlayout.widget.ConstraintLayout>