<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/headerTitleNowPlaying"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/gilroy_extra_blod"
                android:text="@string/header1"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/seeAllNowPlaying"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/gilroy_extra_blod"
                android:padding="8dp"
                android:text="@string/see_all"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/headerTitleNowPlaying"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/headerTitleNowPlaying" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/nowPlayingRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                tools:listitem="@layout/now_playing_item"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="@+id/headerTitleNowPlaying"
                app:layout_constraintTop_toBottomOf="@+id/seeAllNowPlaying"
                app:layout_constraintEnd_toEndOf="@+id/seeAllNowPlaying" />

            <TextView
                android:id="@+id/headerTitlePopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/gilroy_extra_blod"
                android:text="@string/header2"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nowPlayingRv"/>

            <TextView
                android:id="@+id/seeAllPopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/gilroy_extra_blod"
                android:padding="8dp"
                android:text="@string/see_all"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/headerTitlePopular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/headerTitlePopular" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popularRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                tools:listitem="@layout/home_horizontal_item"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="@+id/headerTitlePopular"
                app:layout_constraintTop_toBottomOf="@+id/headerTitlePopular"
                app:layout_constraintEnd_toEndOf="@+id/seeAllPopular" />

            <TextView
                android:id="@+id/headerTitleUpcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/gilroy_extra_blod"
                android:text="@string/header3"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popularRv"/>

            <TextView
                android:id="@+id/seeAllUpcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/gilroy_extra_blod"
                android:padding="8dp"
                android:text="@string/see_all"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/headerTitleUpcoming"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/headerTitleUpcoming" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/upcomingRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                tools:listitem="@layout/home_horizontal_item"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="@+id/headerTitleUpcoming"
                app:layout_constraintTop_toBottomOf="@+id/headerTitleUpcoming"
                app:layout_constraintEnd_toEndOf="@+id/seeAllUpcoming" />

            <TextView
                android:id="@+id/headerTitleTopRated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/gilroy_extra_blod"
                android:text="@string/header4"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/upcomingRv"/>

            <TextView
                android:id="@+id/seeAllTopRated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/gilroy_extra_blod"
                android:padding="8dp"
                android:text="@string/see_all"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/headerTitleTopRated"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/headerTitleTopRated" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/topRatedRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="16dp"
                tools:listitem="@layout/home_horizontal_item"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="@+id/headerTitleTopRated"
                app:layout_constraintTop_toBottomOf="@+id/headerTitleTopRated"
                app:layout_constraintEnd_toEndOf="@+id/seeAllTopRated"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>